# bignum

./: CMakeLists.txt  LICENSE  README.md
include/: BigNum.h  StrUtil.h
src/: BigNum.cpp  StrUtil.cpp
test/: TestBigNum.cpp  TestStrUtil.cpp
